tests/paczka1/small_fuzzy/39684521.err
Error in line 7: Cxodg6Pku A62 37,8
Error in line 10: 5DEnBM S347 73,5
